# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_calendar"
description = "API for supporting various types of calendars"
version = "1.2.0"
rust-version = "1.61.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
icu_provider = { version = "1.2.0", path = "../../provider/core", features = ["macros"] }
icu_locid = { version = "1.2.0", path = "../../components/locid" }
tinystr = { version = "0.7.1", path = "../../utils/tinystr", features = ["alloc", "zerovec"], default-features = false }
zerovec = { version = "0.9.4", path = "../../utils/zerovec", default-features = false, features = ["derive"] }
writeable = { version = "0.5.1", path = "../../utils/writeable" }

databake = { version = "0.1.3", path = "../../utils/databake", features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

icu_calendar_data = { path = "data", optional = true }
icu_locid_transform = { path = "../../components/locid_transform", features = ["data"], optional = true }

libm = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = "0.4"
icu = { path = "../icu", default-features = false }
icu_benchmark_macros = { path = "../../tools/benchmark/macros" }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"

[features]
std = ["icu_provider/std", "icu_locid/std"]
serde = ["dep:serde", "zerovec/serde", "tinystr/serde", "icu_provider/serde"]
datagen = ["serde", "dep:databake", "zerovec/databake", "tinystr/databake"]
bench = []
data = ["dep:icu_calendar_data", "dep:icu_locid_transform"]

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[bench]]
name = "date"
harness = false

[[bench]]
name = "datetime"
harness = false

[[bench]]
name = "iso"
harness = false

[[example]]
name = "iso_date_manipulations"

[[example]]
name = "iso_datetime_manipulations"
