# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_calendar"
description = "API for supporting various types of calendars"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
icu_provider = { workspace = true, features = ["macros"] }
icu_locid = { workspace = true }
tinystr = { workspace = true, features = ["alloc", "zerovec"] }
zerovec = { workspace = true, features = ["derive"] }
writeable = { workspace = true }

databake = { workspace = true, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

icu_calendar_data = { workspace = true, optional = true }
icu_locid_transform = { workspace = true, optional = true, features = ["compiled_data"] }

libm = { version = "0.2", default-features = false }

[dev-dependencies]
icu = { workspace = true }
icu_benchmark_macros = { workspace = true }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4"


[features]
default = ["compiled_data"]
std = ["icu_provider/std", "icu_locid/std"]
serde = ["dep:serde", "zerovec/serde", "tinystr/serde", "icu_provider/serde"]
datagen = ["serde", "dep:databake", "zerovec/databake", "tinystr/databake"]
bench = []
compiled_data = ["dep:icu_calendar_data", "dep:icu_locid_transform"]

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[bench]]
name = "date"
harness = false

[[bench]]
name = "datetime"
harness = false

[[bench]]
name = "iso"
harness = false

[[bench]]
name = "convert"
harness = false

[[example]]
name = "iso_date_manipulations"

[[example]]
name = "iso_datetime_manipulations"
