# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/rust/rustc_library.gni")
import("//build/test/test_package.gni")
import("//build/testing/environments.gni")
# Library for working with collections of Unicode code points.
rustc_library("char_collection") {
  edition = "2018"
  with_unit_tests = true
  deps = [
    "//src/lib/intl/unicode_utils/unicode_blocks",
    "//third_party/rust_crates:anyhow",
    "//third_party/rust_crates:paste",
    "//third_party/rust_crates:thiserror",
    "//third_party/rust_crates:unic-char-range",
    "//third_party/rust_crates:unic-ucd-block",
  ]
}
test_package("char_collection_tests") {
  deps = [ ":char_collection_test" ]
  tests = [
    {
      name = "char_collection_lib_test"
      environments = basic_envs
    },
  ]
}
group("tests") {
  testonly = true
  public_deps = [ ":char_collection_tests" ]
}
