# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_collator"
description = "API for comparing strings according to language-dependent conventions"
version = "1.2.0"
rust-version = "1.61.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
icu_collections = { version = "1.2.0", path = "../../components/collections" }
icu_locid = { version = "1.2.0", path = "../../components/locid" }
icu_normalizer = { version = "1.2.0", path = "../../components/normalizer" }
icu_properties = { version = "1.2.0", path = "../../components/properties" }
icu_provider = { version = "1.2.0", path = "../../provider/core", features = ["macros"] }
utf8_iter = "1.0"
utf16_iter = "1.0"
smallvec = { version = "1.7", features = ["union", "const_generics", "const_new"] }
zerovec = { version = "0.9.4", path = "../../utils/zerovec" }

databake = { version = "0.1.3", path = "../../utils/databake", optional = true, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

icu_collator_data = { path = "data", optional = true }
icu_locid_transform = { path = "../../components/locid_transform", features = ["data"], optional = true }

[dev-dependencies]
arraystring = "0.3.0"
atoi = "1.0.0"
icu = { path = "../icu" }
criterion = "0.4"

[features]
std = ["icu_collections/std", "icu_locid/std", "icu_normalizer/std", "icu_properties/std", "icu_provider/std"]
serde = ["dep:serde", "zerovec/serde", "icu_properties/serde", "icu_normalizer/serde", "icu_collections/serde", "icu_provider/serde"]
datagen = ["serde", "dep:databake", "zerovec/databake", "icu_properties/datagen", "icu_normalizer/datagen", "icu_collections/databake"]
data = ["dep:icu_collator_data", "icu_normalizer/data", "dep:icu_locid_transform"]

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
