# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_collections"
description = "Collection of API for use in ICU libraries."
version = "1.0.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
yoke = { path = "../../utils/yoke", features = ["derive"] }
zerofrom = { path = "../../utils/zerofrom", features = ["derive"] }
zerovec = { path = "../../utils/zerovec", features = ["yoke"] }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
databake = { path = "../../utils/databake", features = ["derive"], optional = true }

[dev-dependencies]
postcard = { version = "1.0.0", features = ["alloc"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = "0.3.4"
icu_benchmark_macros = { path = "../../tools/benchmark/macros" }
iai = "0.1.1"
icu = { path = "../icu", default-features = false }

[features]
std = []
serde = ["dep:serde", "zerovec/serde"]
databake = ["dep:databake", "zerovec/databake"]
bench = []

[lib]
bench = false  # This option is required for Benchmark CI
path = "src/lib.rs"

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[bench]]
name = "codepointtrie"
harness = false
path = "src/codepointtrie/benches/codepointtrie.rs"

[[bench]]
name = "iai_cpt"
harness = false
required-features = ["bench"]
path = "src/codepointtrie/benches/iai_cpt.rs"

[[bench]]
name = "inv_list"
harness = false
path = "src/codepointinvlist/benches/inv_list.rs"

[[example]]
name = "unicode_bmp_blocks_selector"
path = "src/codepointinvlist/examples/unicode_bmp_blocks_selector.rs"
