# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_collections"
description = "Collection of API for use in ICU libraries."
version = "1.2.0"
rust-version = "1.61.0"
authors = ["The ICU4X Project Developers"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-DFS-2016"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
yoke = { version = "0.7.1", path = "../../utils/yoke", features = ["derive"] }
zerofrom = { version = "0.1.1", path = "../../utils/zerofrom", features = ["derive"] }
zerovec = { version = "0.9.4", path = "../../utils/zerovec", features = ["yoke"] }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
databake = { version = "0.1.3", path = "../../utils/databake", features = ["derive"], optional = true }

[dev-dependencies]
postcard = { version = "1.0.0", features = ["alloc"], default-features = false }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = "0.4"
icu_benchmark_macros = { path = "../../tools/benchmark/macros" }
iai = "0.1.1"
icu = { path = "../icu", default-features = false }
icu_testdata = { path = "../../provider/testdata", default-features = false, features = ["icu_properties", "icu_locid_transform"] }

[features]
std = []
serde = ["dep:serde", "zerovec/serde"]
databake = ["dep:databake", "zerovec/databake"]
bench = []

[lib]
bench = false  # This option is required for Benchmark CI
path = "src/lib.rs"

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[bench]]
name = "codepointtrie"
harness = false
path = "src/codepointtrie/benches/codepointtrie.rs"

[[bench]]
name = "iai_cpt"
harness = false
required-features = ["bench"]
path = "src/codepointtrie/benches/iai_cpt.rs"

[[bench]]
name = "inv_list"
harness = false
path = "src/codepointinvlist/benches/inv_list.rs"

[[example]]
name = "unicode_bmp_blocks_selector"
path = "src/codepointinvlist/examples/unicode_bmp_blocks_selector.rs"
