# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_collections"
description = "Collection of API for use in ICU libraries."

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
yoke = { workspace = true, features = ["derive"] }
zerofrom = { workspace = true, features = ["derive"] }
zerovec = { workspace = true, features = ["derive", "yoke"] }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
databake = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
postcard = { version = "1.0.0", features = ["alloc"], default-features = false }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icu_benchmark_macros = { workspace = true }
iai = "0.1.1"
icu = { workspace = true }
icu_properties = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4"

[features]
std = []
serde = ["dep:serde", "zerovec/serde"]
databake = ["dep:databake", "zerovec/databake"]
bench = []

[lib]
bench = false  # This option is required for Benchmark CI

[package.metadata.cargo-all-features]
# Bench feature gets tested separately and is only relevant for CI
denylist = ["bench"]

[[bench]]
name = "codepointtrie"
harness = false
path = "src/codepointtrie/benches/codepointtrie.rs"

[[bench]]
name = "iai_cpt"
harness = false
required-features = ["bench"]
path = "src/codepointtrie/benches/iai_cpt.rs"

[[bench]]
name = "inv_list"
harness = false
path = "src/codepointinvlist/benches/inv_list.rs"
