[package]
name = "icu-data-provider-json"
description = "ICU4X data provider that reads from JSON files"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[features]
default = ["std"]
std = ["no-std-compat/std", "serde/std", "serde_json/std"]

[dependencies]
icu-data-provider = { path = "../data-provider" }
icu-locale = { path = "../locale" }

[dependencies.async-trait]
version = "0.1.30"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "alloc"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.no-std-compat]
version = "0.4.0"
features = ["alloc"]

[[test]]
name = "file_io"
path = "tests/test_file_io.rs"
required-features = ["std"]
