[package]
name = "icu-data-provider-json"
description = "ICU4X data provider that reads from JSON files"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
icu-data-provider = { path = "../data-provider" }
icu-locale = { path = "../locale" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[[test]]
name = "file_io"
path = "tests/test_file_io.rs"
required-features = ["std"]
