[package]
name = "icu-data-provider"
description = "Trait and struct definitions for the ICU data provider"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
icu-locale = { path = "../locale" }
tinystr = "0.3"
erased-serde = "0.3"

[dependencies.smallstr]
version = "0.2"
features = ["serde"]

[dependencies.downcast-rs]
version = "1.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"
