[package]
name = "icu-data-provider"
description = "Trait and struct definitions for the ICU data provider"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[features]
# Enable InvariantDataProvider, a locale-agnostic data provider.
invariant = []
# Serialize None values when exporting. Required for Bincode.
serialize_none = []

[dependencies]
icu-locale = { path = "../locale" }
tinystr = "0.3"
erased-serde = "0.3"
smallstr = { version = "0.2", features = ["serde"] }
downcast-rs = "1.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
