# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_decimal"
description = "API for formatting basic decimal numbers in a locale-sensitive way"
version = "0.2.0"
authors = ["The ICU4X Project Developers"]
edition = "2018"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
# Keep this in sync with other crates unless there are exceptions
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md"
]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
icu_locid = { version = "0.2", path = "../locid" }
icu_provider = { version = "0.2", path = "../../provider/core" }
fixed_decimal = { version = "0.2", path = "../../utils/fixed_decimal" }
writeable = { version = "0.2", path = "../../utils/writeable" }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
icu = { path = "../icu", default-features = false }
icu_benchmark_macros = { version = "0.2", path = "../../tools/benchmark/macros" }
icu_locid_macros = { version = "0.2", path = "../locid/macros" }
icu_testdata = { version = "0.2", path = "../../provider/testdata" }
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["provider_serde"]
bench = []
provider_serde = ["serde"]

[[bench]]
name = "fixed_decimal_format"
harness = false

[[example]]
name = "code_line_diff"
required-features = ["provider_serde"]
